--- a/index.html
+++ b/index.html
@@ -748,19 +748,18 @@
       // DAS at bottom
       {
         u: "3U", uNum: 3,
-        name: "6-Bay DAS (10-inch width target)",
+        name: "TGC 5-Bay 3.5" SATA/SAS Hot-Swappable HDD Enclosure (10-inch width target)",
         category: "storage",
         brand: "Custom enclosure / Shelf",
-        price: 0, watts: 55,
-        description: "Bottom-mounted 6-bay DAS target (10-inch rack fit).",
-        notes: "If 6 bays fits your 10-inch chassis width: keep the drives at the bottom for stability and airflow. Consider front-to-back airflow and a single hot-swap plane if you want easy servicing.",
+        price: 229, watts: 55,
+        description: "Bottom-mounted 5-bay DAS target (10-inch rack fit).",
+        notes: "If 5 bays fits your 10-inch chassis width: keep the drives at the bottom for stability and airflow. Consider front-to-back airflow and a single hot-swap plane if you want easy servicing.",
         extras: [
           { name: "Bay 1", price: 0 },
           { name: "Bay 2", price: 0 },
           { name: "Bay 3", price: 0 },
           { name: "Bay 4", price: 0 },
           { name: "Bay 5", price: 0 },
-          { name: "Bay 6", price: 0 },
         ]
       },
 
